2022-01-06 Gabriele Gorla <gorlik@yahoo.com>
    * support/regression/ports/uc6502/spec.mk:
    Rename m6502 port to mos6502.

2022-01-05 Gabriele Gorla <gorlik@yahoo.com>
    * sdas/as6500/clean.mk,
      sdas/as6500/Makefile.in,
      sdas/as6500/r6500.h,
      sdas/as6500/r65adr.c,
      sdas/as6500/r65mch.c,
      sdas/as6500/r65pst.c:
      Add as6500 in preparation of mos6502 port merge.

2022-01-05 Gabriele Gorla <gorlik@yahoo.com>
    * src/hc08/gen.c,
      src/hc08/main.c,
      src/hc08/ralloc.c:
      replace TRUE/FALSE with true/false.
      
2022-01-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3295.
	* sdas/asrab/rab.h:
	  Fix bug #3261.

2022-01-02 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  doc/sm83-arguments.svg,
	  doc/stm8-arguments.svg,
	  doc/z80-arguments.svg:
	  Improve calling convention documentation.

2021-12-28 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Document z80 banked calls (fix bug #3299).

2021-12-27 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/*/__sdcc_bcall.s,
	  support/regression/tests/banked.c:
	  Fix bug # 3298.

2021-12-20 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* sdccconf_in.h:
	  Fix bug #3297.

2021-12-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  Makefile.common.in,
	  Makefile.in,
	  configure,
	  configure.ac,
	  device/include/asm/sm83,
	  device/include/math.h,
	  device/include/sdcc-lib.h,
	  device/include/setjmp.h,
	  device/include/stdarg.h,
	  device/include/stdatomic.h,
	  device/lib/Makefile.in,
	  device/lib/_memset.c,
	  device/lib/_mullong.c,
	  device/lib/atomic_flag_clear.c,
	  device/lib/sm83,
	  doc/sdccman.lyx,
	  sdcc.spec,
	  src/SDCCast.c,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/SDCCopt.c,
	  src/SDCCpeeph.c,
	  src/port.h,
	  src/z80/gen.c,
	  src/z80/main.c,